Changes in 1.2.1
  * Replace deprecated G_TYPE_INSTANCE_GET_PRIVATE and g_type_class_add_private (Patrick Salecker)
  * Add python unit tests (Patrick Salecker)

Changes in 1.2.0
======================
  * Change max allowed zoom for various maps (Rolf Eike Beer, Philipe Weyland)
  * Add copyright notices to maps (Patrick Salecker)
  * Add configureable user-agent property for apps to clearly identify themselves (Patrick Salecker)
  * Remove dependency on gnome-common (Patrick Salecker, Hubert Kowalski)
  * Add user_data support to points (Martijn Goedhart)
  * Add breakable and shade_alpha properties to polygons (Samuel Cowen)
  * Python example updated to Python3 (Felipe S. S. Schneider)
  * Add Glade catalog file for better glade integration (Davide Gessa)

Changes in 1.1.0
======================
  * Add polygon support Samuel Cowen <samuel.cowen89@gmail.com>
  * Add osm_gps_map_zoom_fit_bbox Martijn Goedhart <goedhart.martijn@gmail.com>
  * Fix leaks Roman Lebedev <lebedev.ri@gmail.com>
  * Remove Yahoo (API break) Quentin Glidic <sardemff7+git@sardemff7.net>
  * Build fixes Quentin Glidic <sardemff7+git@sardemff7.net>
  * Fix image rotation Christoph Gysin <christoph.gysin@gmail.com>

Changes in 1.0.2
======================
  * Fix build with new giscanner
  * Build fixes guillomovitch <guillomovitch@gmail.com>
  * Fix open-street-maps Andrew Gee <andrew@andrewgee.org>

Changes in 1.0.1
======================
  * Build fixes

Changes in 1.0.0
======================
  * Gtk3 support (serge.noiraud@laposte.net)
  * Remove deprecated functionality
  * Add z-order property to map items
  * Fix Google

Changes in 0.7.4
======================
  * Fix Google

Changes in 0.7.3
======================
  * When using the mouse scroll wheel to zoom in, centre on the mouse pointer
    (as recommended by the HIG)
  * Doc updates
  * Bug fixes
    * Treat 403 errors as missing tiles
    * Bail if user queues too many tiles to download (DOS)